Add freyso as maintainer

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 84915d90f090ddf0861bc5a56e693840aef33d8856fc1881a20c10bfc21d4a1e
 
 build:
-  number: 1
+  number: 2
   noarch: generic
   run_exports:
     - {{ pin_subpackage('sphinxdft-data', max_pin='x.x.x') }}
@@ -135,3 +135,4 @@ about:
 extra:
   recipe-maintainers:
     - jan-janssen
+    - freyso
